UI improvements: Comment out newsletter, fix spacing, disable external links
- Newsletter section commented out (subscribe_section)
- Footer padding reduced from 308px to 150px, margin-top removed
- Blog section padding increased to 150px for better spacing
- All external links changed to # (CTA buttons, service arrows, footer menu)
- Added screenshot for Vercel deployment reference

--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1284,8 +1284,8 @@ textarea {
 .footer-section{
     position: relative;
     background-color: var(--e-global-color-secondary);
-    padding: 308px 0 0px;
-    margin-top: -218px;
+    padding: 150px 0 0px;
+    /* margin-top: -218px; */
 }
 .middle-portion {
     margin-bottom: 92px;
